# thesis-public

./: .gitignore  Cargo.toml  LICENSE  README.md
evaluation/fuzzbench/: Makefile  copy.sh  default.profraw  requirements.txt
evaluation/fuzzbench/benchmarks/jerryscript_fuzz/: Dockerfile  benchmark.yaml  build.sh
evaluation/fuzzbench/benchmarks/jerryscript_fuzz/jerryscript/jerry-main/: libfuzzer.c
evaluation/fuzzbench/benchmarks/mruby_fuzz/: Dockerfile  benchmark.yaml  build.sh
evaluation/fuzzbench/benchmarks/php_fuzz/: Dockerfile  benchmark.yaml  build.sh
evaluation/fuzzbench/coverage/: get_results.py
evaluation/fuzzbench/fuzzers/aflplusplus/: fuzzer.py
evaluation/fuzzbench/fuzzers/coverage/: builder.Dockerfile  fuzzer.py
evaluation/fuzzbench/fuzzers/custom_cov/: builder.Dockerfile  runner.Dockerfile
evaluation/fuzzbench/fuzzers/gramatron/: builder.Dockerfile  fuzzer.py  fuzzer.yaml  runner.Dockerfile
evaluation/fuzzbench/fuzzers/nautilus/: builder.Dockerfile  fuzzer.py  fuzzer.yaml  runner.Dockerfile
evaluation/fuzzbench/fuzzers/thesis_jerryscript/: builder.Dockerfile
evaluation/fuzzbench/fuzzers/thesis_js/: fuzzer.py  fuzzer.yaml
evaluation/fuzzbench/fuzzers/thesis_mruby/: builder.Dockerfile  fuzzer.yaml  runner.Dockerfile
evaluation/fuzzbench/fuzzers/thesis_php/: builder.Dockerfile  fuzzer.py  fuzzer.yaml
evaluation/fuzzbench/fuzzers/thesis_ruby/: fuzzer.py
evaluation/fuzzbench/thesis/: config.yaml
libafl-fuzzer/: Cargo.toml
libafl-fuzzer/src/: context.rs  lib.rs
libafl-fuzzer/src/feedback/: register.rs
libafl-fuzzer/src/hooks/: mod.rs  no_share.rs
libafl-fuzzer/src/mutators/: mod.rs  recurse_mutate.rs  splice.rs  splice_append.rs
libafl-fuzzer/src/scheduler/: mod.rs
libafl-fuzzer/src/stages/: cmp.rs  deterministic.rs  generate.rs  minimization.rs  mod.rs  recursive_minimization.rs
thesis/: Cargo.toml  asd
thesis/src/: lib.rs  serde.rs  tree.rs  util.rs  visitor.rs
thesis_derive/: Cargo.toml
thesis_derive/src/: lib.rs
unparser-js/: Cargo.toml
unparser-js-coverage/: Cargo.toml
unparser-js-coverage/src/: ast.rs  main.rs  render.rs
unparser-js/src/: ast.rs  main.rs  render.rs
unparser-php/: Cargo.toml
unparser-php-coverage/: Cargo.toml
unparser-php-coverage/src/: ast.rs  main.rs
unparser-php/src/: ast.rs  main.rs  render.rs
unparser-ruby/: Cargo.toml
unparser-ruby-coverage/: Cargo.toml
unparser-ruby-coverage/src/: ast.rs  main.rs  render.rs
unparser-ruby/src/: main.rs
