[package]
name = "libafl-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1"}
# libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1", features = ["introspection"]}
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }
serde = { version = "1.0.214", features = ["derive"] }
thesis = {path = "../thesis", features=["derive", "bincode"]}
blake3 = "1.5.4"

borsh = { version = "1.5.1", features = ["derive"], optional = true }
bincode = {version = "1.3.3", optional = true}
parity-scale-codec = { version = "3.5.0", features = ["derive"], optional = true }
regex = "1.11.1"
num-traits = "0.2.19"

[features]
scale = ["dep:parity-scale-codec"]
borsh = ["dep:borsh"]
bincode = ["dep:bincode"]
