[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }

# different encodings
borsh = { version = "1.5.1", features = ["derive"], optional = true }
parity-scale-codec = { version = "3.5.0", features = ["derive"], optional = true }
bincode = {version = "1.3.3", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }
# rand-utf8 = "0.0.1"
# trace = "0.1.7"

thesis_derive = {path = "../thesis_derive", optional = true}

[features]
scale = ["dep:parity-scale-codec"]
borsh = ["dep:borsh"]
bincode = ["dep:bincode", "dep:serde"]
derive = ["thesis_derive"]
