[package]
name = "thesis_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
blake3 = "1.5.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ['derive', 'parsing', 'extra-traits'] }

# different encodings
borsh = { version = "1.5.1", features = ["derive"], optional = true }
parity-scale-codec = { version = "3.5.0", features = ["derive"], optional = true }
bincode = {version = "1.3.3", optional = true}
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
borsh = ["dep:borsh"]
scale = ["dep:parity-scale-codec"]
bincode = ["dep:bincode", "dep:serde"]
