[package]
name = "unparser-js"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0.216", features = ["derive"] }
thesis = {path = "../thesis", features=["derive", "bincode"]}
libafl-fuzzer = {path = "../libafl-fuzzer", features = ["bincode"]}
blake3 = "1.5.4"
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }
hex = "0.4.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"
